# Autonomous-Codebase-Topography-Engine

./: README.MD  pyproject.toml
src/acte/: parser.py  rdf_builder.py  sparql_engine.py
tests/: test_parser.py  test_rdf_builder.py  test_sparql_engine.py
